<resources>
    <string name="app_name">QRApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_text">Enter text</string>

    <string name="nav_reader_header">READER</string>
    <string name="nav_generator_header">GENERATOR</string>

    <string name="nav_barqr">BARQR</string>
    <string name="nav_qrcode">QRcode</string>
    <string name="nav_barcode">BARcode</string>
    <string name="nav_settings">SETTINGS</string>
    <string name="scan">scan</string>
    <string name="size">size of created images</string>
    <string name="save">save</string>
    <string name="path">path</string>
</resources>