<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item android:title="@string/nav_reader_header">
                <menu>
                        <item
                            android:id="@+id/nav_barqr"
                            android:icon="@drawable/ic_menu_camera"
                            android:title="@string/nav_barqr" />
                </menu>
        </item>
        <item android:title="@string/nav_generator_header">
                <menu>
                        <item
                            android:id="@+id/nav_barcode"
                            android:icon="@drawable/ic_menu_gallery"
                            android:title="@string/nav_barcode"/>
                        <item
                            android:id="@+id/nav_qrcode"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="@string/nav_qrcode" />
                </menu>
        </item>
        <item android:title="@string/nav_settings"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            />
</menu>